--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,20 +19,23 @@ div.page {
     grid-template-areas: 'header content' 'menu content' 'footer footer';
 }
 div.header {
-    background-color: #53565A;
-    border: 1px solid black;
+    background-color: #2c2f33;
+    border: 1px solid #000000;
     grid-area:header;
 }
 div.menu {
-    background-color: aquamarine;
+    background-color: #23272a;
+    border: 1px solid #000000;
     grid-area:menu;
 }
 div.content{
-    background-color: blanchedalmond;
+    background-color: #99aab5;
+    border: 1px solid #000000;
     grid-area:content;
 }
 div.footer {
-    background-color: crimson;
+    background-color: #FFAD00;
+    border: 1px solid #000000;
     grid-area:footer;
 }
 
@@ -50,15 +53,19 @@ div.footer {
     font-size: 2.5em;
 }
 .HeaderText {
+    margin-left: 6px;
+    float: left;
+}
+.HeaderImage {
     float:left;
 }
 a:link {
-    color: orange;
+    color: #FFAD00;
     background-color: transparent;
     text-decoration: none;
 }
 a:visited {
-    color: orange;
+    color: #FFAD00;
     background-color: transparent;
     text-decoration: none;
 }
@@ -73,10 +80,29 @@ a:active {
     text-decoration: underline;
 }
 
+/*Button Entries*/
+.menubutton {
+    background-color: #FFAD00;
+    border: 1px solid #000000;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: "Trebuchet MS";
+    font-size: 100%;
+    text-shadow: -1px 1px 2px #000,
+    1px 1px 2px #000,
+    1px -1px 0 #000,
+    -1px -1px 0 #000;
+    width: 100%;
+}
+
 /*Image Entries*/
 img {
-    border: 3px solid black;
-  }
+    border: 3px solid #000000;
+}
+
 /*Fade Entries*/
 .fade-in {
     animation: fadeIn ease 10s;
